Bug 1259696 - Check read buffer mode when doing CopyTexImage. r=jgilbert

MozReview-Commit-ID: FYMiMaiRhii

--HG--
extra : rebase_source : 9f71a99d40df8430543d90f1eb64cda01d060b88